--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="LegalHelp Online" />
-    <meta name="keywords" content="legal help online, legal serives, legal document, law, family law, civil litigation, criminal law" />
+    <meta name="description" content="LegalHelp Online. We are committed to providing access to Justice to all people and ensuring that every
+    person has equal access to Justice." />
+    <meta name="keywords" content="legal help online, legal help uganda, legal help online ug, legal help, online legal help, online legal serives, legal document, law, family law, civil litigation, criminal law" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
